# homework-1-sets-ericmercer

./: README.md  config_test.sh  pyproject.toml
.github/workflows/: classroom.yml
src/homework1/: set_operations.py
tests/: test_integration_tests.py  test_set_operations.py
